# santuario-cpp

./: CMakeLists.txt  Dockerfile  README.md  config.h.in  meson.build  meson_options.txt  vcpkg.json  xml-security-c.pc.in
subprojects/: xerces-c.wrap
xsec/: CMakeLists.txt  XmlSecurityCConfig.cmake.in  meson.build
xsec/enc/OpenSSL/: OpenSSLCryptoKeyRSA.cpp
xsec/framework/: XSECConfig.hpp.in  XSECDefs.hpp  XSECW32Config.hpp  meson.build
xsec/utils/: XSECPlatformUtils.cpp  XSECSafeBufferFormatter.hpp
